--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "array-shuffle": "^3.0.0",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
